overlay/develop/deployment-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
spec:
  template:
    spec:
      volumes:
        - name: moodle-data
          persistentVolumeClaim:
            claimName: moodle-data
        - name: moodle-configuration-volume
          configMap:
            name: moodle-configuration
            defaultMode: 420   
      containers:
      - name: moodle
        image: quay.io/maximilianopizarro/moodle:latest
        volumeMounts:
          - name: moodle-data
            mountPath: /opt/app-root/moodledata
          - name: moodle-configuration-volume
            mountPath: /opt/app-root/src/config.php
            subPath: config.php
